Add some english post

--- a/data/posts/en/introdution-of-LP-modeling.mdx
+++ b/data/posts/en/introdution-of-LP-modeling.mdx
@@ -1,8 +1,8 @@
 ---
-title: Tối ưu tuyến tính và mô hình hóa
-date: 2024-07-21
+title: Linear programming and modeling
+date: 2024-09-27
 tags: [modeling, math, LP]
-summary: Giới thiệu phương pháp tối ưu tuyến tính và mô hình hóa.
+summary: Introduction to linear programming and modeling.
 image:
 authors: [default]
 ---
