--- a/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
+++ b/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-binox.mdx
@@ -1,9 +1,9 @@
 ---
-title: Mô hình hóa câu đố Binox
+title: Modeling Binox puzzle
 date: 2024-08-30
 series:
   order: 5
-  title: Mô hình hóa các câu đố logic
+  title: Modeling logic puzzles
 tags: [modeling, math, MILP, programing, python]
 summary: Mô hình hóa và giải câu đố Binox bằng phương pháp tối ưu tuyến tính hỗn hợp nguyên.
 image: /posts/Binox.png
