--- a/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-star-battle.mdx
+++ b/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-star-battle.mdx
@@ -1,11 +1,11 @@
 ---
-title: Mô hình hóa câu đố Star Battle
-date: 2024-08-27
+title: Modeling Star Battle puzzle
+date: 2024-09-29
 series:
   order: 2
-  title: Mô hình hóa các câu đố logic
+  title: Modeling logic puzzles
 tags: [modeling, math, MILP, programing, python]
-summary: Mô hình hóa và giải câu đố Star Battle bằng phương pháp tối ưu tuyến tính hỗn hợp nguyên.
+summary: Modeling and solving Star Battle puzzle using mixed-integer linear programming.
 image: /posts/StarBattle.png
 authors: [default]
 ---
