--- a/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
+++ b/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-sudoku.mdx
@@ -1,11 +1,11 @@
 ---
-title: Mô hình hóa câu đố Sudoku
-date: 2024-08-26
+title: Modeling Sudoku puzzle
+date: 2024-09-28
 series:
   order: 1
-  title: Mô hình hóa các câu đố logic
+  title: Modeling logic puzzles
 tags: [modeling, math, MILP, programing, python]
-summary: Mô hình hóa và giải câu đố Sudoku bằng phương pháp tối ưu tuyến tính hỗn hợp nguyên.
+summary: Modeling and solving Sudoku puzzle using mixed-integer linear programming.
 image: /posts/Sudoku.jpg
 authors: [default]
 ---
