--- a/data/posts/en/modeling-tips-trick.mdx
+++ b/data/posts/en/modeling-tips-trick.mdx
@@ -1,15 +1,15 @@
 ---
-title: Một số kỹ thuật mô hình hóa
-date: 2024-08-25
+title: Modeling tips & tricks
+date: 2024-09-26
 tags: [modeling, math, LP, MILP, tip and trick]
-summary: Giới thiệu một số kỹ thuật mô hình hóa hay sử dụng.
+summary: Introduce some commonly used modeling techniques.
 image:
 authors: [default]
 ---
 
 import { Twemoji } from '@/components/common/Twemoji.tsx'
 
-## 1. Sử dụng biến nhị phân
+## 1. Binary variables
 
 Phương pháp này được sử dụng nếu ta có thể biết chính xác các giá trị có thể có của một biến số.
 Chẳng hạn ta có một biến $x \in \mathbb{Z}$ với điều kiện $0 \leq x \leq 9$ thì ta có thể tách biến
