--- a/data/posts/en/the-first-blog.mdx
+++ b/data/posts/en/the-first-blog.mdx
@@ -1,19 +1,21 @@
 ---
 title: The first blog
-date: 2024-07-20
+date: 2024-09-24
 tags: [blog, hello world]
 summary: Some insights into this website
 image:
 authors: [default]
 ---
 
-I've been wanting to start a blog since early 2022 to share my thoughts and experiences,
-but life (and school!) got in the way. Finally, in mid-2024, I was able to make it happen.
+Planned since early 2022 with the goal of sharing my ideas and stories,
+this blog was delayed due to my study and research at the university.
+It was not until mid-2024 that I finally started building this website.
 
-I'm pumped to share some awesome content with you! So stay tuned for new posts.
-I hope you find something cool here. Thanks for reading, and good luck with everything!
+Now that it's finished, I'm excited to share engaging articles with you.
+Stay tuned for upcoming posts! I hope you find something valuable and that
+so happy if it benefits you. Thank you for reading, and best wishes to you!
 
-
-*Thank you [quanhoang-pm](https://quanhoang-pm.github.io/), your blog has inspired me to create my own blog.
-Thank you [timlrx](https://github.com/timlrx/tailwind-nextjs-starter-blog)
-and [leohuynh](https://www.leohuynh.dev/) for being invaluable resources in the development of this website.*
+*Thank you [quanhoang-pm](https://quanhoang-pm.github.io/), your blog has inspired me to
+create my own blog. Thank you [timlrx](https://github.com/timlrx/tailwind-nextjs-starter-blog)
+and [leohuynh](https://www.leohuynh.dev/) for being invaluable resources in the development
+of this website.*
