--- a/data/posts/vi/solve-LP-python-mip.mdx
+++ b/data/posts/vi/solve-LP-python-mip.mdx
@@ -10,7 +10,7 @@ authors: [default]
 Python-MIP là một thư viện tập hợp rất nhiều công cụ để mô hình hóa và giải các bài toán
 Tối ưu tuyến tính hỗn hợp nguyên (MILP) với ưu điểm dễ dàng sử dụng cùng với hiệu suất khá cao
 thì đây là một thư viện không tồi để giải các bài toán MILP. Trong bài này, ta sẽ tìm hiểu
-cách để giải một mô hình MILP bằng Python-Mip
+cách để giải một mô hình MILP bằng Python-MIP
 
 ## 1. Cài đặt và chuẩn bị
 Hãy chắc chắn rằng bạn đã cài đặt [Python](https://www.python.org/). Cài đặt Python-Mip bằng câu lệnh sau
