--- a/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
+++ b/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-galaxies.mdx
@@ -1,11 +1,11 @@
 ---
-title: Mô hình hóa câu đố Galaxies
-date: 2024-08-28
+title:  Modeling Galaxies puzzle
+date: 2024-09-30
 series:
   order: 3
-  title: Mô hình hóa các câu đố logic
+  title:Modeling logic puzzles
 tags: [modeling, math, MILP, programing, python]
-summary: Mô hình hóa và giải câu đố Galaxies bằng phương pháp tối ưu tuyến tính hỗn hợp nguyên.
+summary: Modeling and solving Galaxies puzzle using mixed-integer linear programming.
 image: /posts/Galaxies.png
 authors: [default]
 ---
