--- a/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
+++ b/data/posts/en/logic-puzzle-modeling/logic-puzzle-modeling-troix.mdx
@@ -1,11 +1,11 @@
 ---
-title: Mô hình hóa câu đố Troix
-date: 2024-08-29
+title: Modeling Troix puzzle
+date: 2024-10-01
 series:
   order: 4
-  title: Mô hình hóa các câu đố logic
+  title: Modeling logic puzzles
 tags: [modeling, math, MILP, programing, python]
-summary: Mô hình hóa và giải câu đố Troix bằng phương pháp tối ưu tuyến tính hỗn hợp nguyên.
+summary: Modeling and solving Troix puzzle using mixed-integer linear programming.
 image: /posts/Troix.png
 authors: [default]
 ---
